--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,7 @@
 .header{
     text-align: center;
     margin: 20px 0;
-    background-color: tomato;
+    background-image: linear-gradient(to right, rgb(0, 4, 255),rgba(255, 255, 0, 0.774), rgb(45, 212, 12));
     padding: 10px;
 }
 .header h2{
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(161, 0, 0);
+    background-image: linear-gradient(to right, rgb(7, 23, 255),rgb(195, 0, 255), rgba(7, 23, 255), rgb(195, 0, 255), rgb(7, 23, 255));
 }
 .informacoes h2{
     color: white;
